Update agent detail display - Change font sizes and weights to make more readable - Fix issue in USA agent data (address line)

--- a/src/Components/Agents/AgentDetail.scss
+++ b/src/Components/Agents/AgentDetail.scss
@@ -20,20 +20,25 @@
 }
 
 .agentdetail-company {
-  margin: 58px 0 0 0;
+  margin: 38px 0 0 0;
   font-size: 16px;
   font-weight: 700;
 }
 
 .agentdetail-address {
-  margin: 25px 0 0 0;
-  font-size: 16px;
+  margin: 20px 0 0 0;
+  font-size: 14px;
   font-weight: 400;
 }
 
 .agentdetail-agent {
-  margin: 45px 0 0 0;
+  margin: 35px 0 0 0;
   font-size: 16px;
+  font-weight: 400;
+}
+
+.agentdetail-agentcontact {
+  font-size: 14px;
   font-weight: 400;
 }
 
